# OpenAI-Realtime-API-Utils

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  todo.md
experiments/: test_ws_client.py
experiments/test_agents_ws_client.py/: test_ws_client.py
src/: test_interface.py  test_realtime.py
src/openai_realtime_api_utils/: __init__.py  audio_config.py  b64_decode_cachable.py  conversation.py  conversation_group.py  give_client_event_id.py  interface.py  niceness.py  pyaudio_utils.py  shared.py  speech_player.py  track_configs.py  track_conversation.py
src/openai_realtime_api_utils/middlewares/: __init__.py  audio_player.py  give_client_event_id.py  interrupt.py  interruptable_audio_player.py  log_events.py  print_events.py  shared.py  stream_mic.py  tool_call_on_speech_end.py  track_config.py  track_configs.py  track_conversation.py
tests/: test_audio_player_buffer.py  test_interface.py  test_middlewares.py  test_middlewares_tool_call.py  test_realtime.py
