[project]
name = "openai-realtime-api-utils"
version = "0.1.1"
description = " Python middlewares over the WebSocket of OpenAI Realtime API. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.7.1",
    "openai-agents",
    "uuid>=1.30",
    "websockets>=15.0.1",
]

[tool.uv.sources]
openai-agents = { git = "https://github.com/Daniel-Chin/openai-agents-python" }
