[project]
name = "openai-realtime-api-utils"
version = "0.1.2"
description = "Python middlewares over the WebSocket of OpenAI Realtime API. "
readme = "README.md"
requires-python = ">=3.12"
license = { file = 'LICENSE' }
authors = [
  { name = 'Daniel Chin', email = 'daniel.chin@nyu.edu' },
]
dependencies = [
    "openai>=2.7.1",
    "openai-agents",
    "uuid>=1.30",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
local-audio = [
    "pyaudio==0.2.14",
    "daniel-chin-python-alt-stdlib[pyaudio]",
]

[tool.uv.sources]
openai-agents = { git = "https://github.com/Daniel-Chin/openai-agents-python" }
daniel-chin-python-alt-stdlib = { git = "https://github.com/Daniel-Chin/python-alt-stdlib" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = 'https://github.com/daniel-chin/openai-realtime-api-utils'
Source = 'https://github.com/daniel-chin/openai-realtime-api-utils'
Issues = 'https://github.com/daniel-chin/openai-realtime-api-utils/issues'
